fixed x scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,13 @@
 html,
 body {
-  max-width: 100vw;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 body {
   -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 * {
